# QTinker

./: .gitignore  BERT_COMPLETE_SUMMARY.md  BERT_IMPLEMENTATION_CHECKLIST.md  BERT_MODELS.md  BERT_MODELS_SUMMARY.md  BERT_QUICKSTART.md  BERT_VISUAL_OVERVIEW.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  COMPLETION_SUMMARY.md  COMPRESSION_GUIDE.md  EXIT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PINOKIO_EXAMPLES_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_REFERENCE_MODELS.md  README.md  README_BERT.md  README_DOCUMENTATION.md  STABLE_DIFFUSION_DOCUMENTATION_INDEX.md  STABLE_DIFFUSION_FIX_SUMMARY.md  STABLE_DIFFUSION_GUIDE.md  TESTING_GUIDE.md  UPDATE_INSTRUCTIONS.md  distill_quantize.js  install.js  pinokio.js  pinokio_meta.json  pyproject.toml  requirements.txt  reset.js  select_quantize_model.js  select_student_model.js  select_teacher_model.js  start.js  temp_install_torch.js  torch.js  (+1 more)
app/: __init__.py  app.py  compression_toolkit.py  compression_ui.py  convert_openvino.py  distill_quant_app.py  distillation.py  enhanced_file_browser.py  gradio_ui.py  model_loader.py  registry.py  requirements.txt  run_distillation.py
app/config/: settings.yaml
app/configs/: __init__.py  torchao_configs.py
app/core/: __init__.py  device_manager.py  distillation.py  local_llm.py  logic.py
app/outputs/: .gitkeep
app/outputs/distilled/: .gitkeep
app/outputs/distilled/distilled_model/: config.json
app/outputs/quantized/: .gitkeep
app/settings/: __init__.py  app_settings.py
configs/: torchao_configs.py
settings/: app_settings.py
